--- a/SmartContactManager/src/main/resources/templates/normal/user_dashboard.html
+++ b/SmartContactManager/src/main/resources/templates/normal/user_dashboard.html
@@ -20,6 +20,13 @@
 					</div>
 					<h1 class="text-center mt-3 text-secondry font-italic font-weight-light">Start Adding Your Contact on Cloud.</h1>
 					<a th:href="@{/user/add}" class="btn btn-primary btn-block text-uppercase mt-4">Add Your Contact</a>
+					
+					<hr>
+					<h3 class="my-2">Donate Us</h3>
+					<input type="text" class="form-control my-2" placeholder="Enter Amount Here" id="amount">
+					<div class="conatiner text-center my-2">
+					<button class="btn btn-success" onclick="paymentStart()">Pay</button>
+					</div>
 				</div>
 			</div>
 		</div>
